@@ -1,5 +1,15 @@
 2009-06-04  Roland Steiner <rolandsteiner@google.com>
 
+        Reviewed by Eric Seidel.
+
+        Bug 26202: add macros for primitive values to simplify CSSStyleSelector::applyProperty
+        https://bugs.webkit.org/show_bug.cgi?id=26202
+
+        * css/CSSStyleSelector.cpp: add HANDLE_INHERIT_AND_INITIAL_AND_PRIMITIVE[_WITH_VALUE] macros
+        (WebCore::CSSStyleSelector::applyProperty): use new macros
+
+2009-06-04  Roland Steiner <rolandsteiner@google.com>
+
         Reviewed by Eric Seidel
 
         Bug 26203: Move parsing of 'attr(X)' values to own method
